clusters/lab-stg/councorseci/deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: concourse
  labels:
    team: DevOps
    istio-injection: enabled
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: concourse-internal
  namespace: concourse
spec:
  hosts:
  - "concourse-ci.k8s.stg.lab.internal"
  gateways:
  - istio-system/gateway-internal
  http:
  - route:
    - destination:
        host: concourse-web
        port:
          number: 8080
